# atlas

./: .env.example  .eslintrc.json  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: ci.yml
api/: index.py
api/_core/: audit.py  auth.py  chunker.py  errors.py  idempotency.py  lexorank.py  models.py  pgmq.py  settings.py  supabase.py
api/internal/: worker_drain.py
api/routers/: attachments.py  boards.py  cards.py  columns.py  graph.py  health.py  inbox.py  leads.py  me.py  organize.py  pages.py  projects.py  search.py  workspaces.py
app/: globals.css  layout.tsx
app/(app)/: layout.tsx
app/login/: page.tsx
components/board/: Board.tsx  Card.tsx  CardEditorModal.tsx  Column.tsx
components/brand/: AtlasLogo.tsx
components/graph/: GraphCanvas.tsx  GraphCanvasLazy.tsx
components/inbox/: InboxList.tsx  QuickCapture.tsx
components/leads/: ImportLeadsModal.tsx  LeadAvatar.tsx  LeadDrawer.tsx  LeadStats.tsx  LeadsPipeline.tsx  LeadsTable.tsx  LeadsTimeline.tsx  NewLeadModal.tsx  StageBar.tsx  StagePill.tsx
components/notes/: BacklinksPanel.tsx  (+6 more)
design-system/: colors_and_type.css  motion.css
lib/: api.ts  leads.ts  lexorank.ts  motion.ts  types.ts
scripts/: _env.py  scrape-leads.py  seed-demo.py  seed-workspace.sql  wipe-workspace.py
supabase/: config.toml  seed.sql
tests/: conftest.py
vps/: .env.example  .gitignore  Caddyfile.example  README.md  requirements.txt  run-dev.ps1  server.py  setup.ps1  uninstall-service.ps1
(+119 files in other folders)
