[project]
name = "atlas-api"
version = "0.0.0"
description = "Atlas backend — FastAPI on Vercel Python functions."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "supabase>=2.10.0",
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "anyio>=4.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/api"]
